--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!--header section starts here -->
     <header class="header">
-        <a href="" class="logo">portfolio</a>
+        <a href="" class="logo"><img src="images/mose-logo.png" width ="100px" style="border-radius: 10px;" alt="portfolio"></a>
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
             <a href="#home" class="active">home</a>
@@ -35,29 +35,32 @@
             <p>I am a passionate and dedicated front-end developer with a flair for creating seamless and user-friendly web experiences. With a strong foundation in HTML, CSS, and JavaScript, I bring digital designs to life, turning visions into interactive, visually appealing websites and web applications.</p>
        
         <div class="social-media">
-            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-            <a href="#"><i class='bx bxl-whatsapp-square'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100074292634258"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="https://wa.me/254769933048?text=How&ref=blog.short.io"><i class='bx bxl-whatsapp-square'></i></a>
+            <a href="https://github.com/MOWDAD/"><i class='bx bxl-github'></i></a>
             <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            
         </div>
-        <a href="#" class="btn">Download CV</a>
+        <hr>
+        <a href="MOSES OTIENO CV.pdf" class="btn">Download CV</a>
+        <a href="moses's resume.docx" class="btn">Download Resume</a>
+        <hr>
     </div>
     <div class="home-image">
-        <img src="images/moses.png" alt="">
+        <img src="images/me2.jpg" alt="">
 
     </div>
     </section>
     <!--about section-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/moses.png" alt="">
+            <img src="images/me2.jpg" alt="">
         </div>
         <div class="about-content">
            <h2 class="heading">About <span>Me</span></h2>
            <h3>Front end developer</h3>
             <p>I am a passionate and dedicated front-end developer with a flair for creating seamless and user-friendly web experiences. With a strong foundation in HTML, CSS, and JavaScript, I bring digital designs to life, turning visions into interactive, visually appealing websites and web applications.</p>
-            <a href="#" class="btn">Read more</a>
+            <a href="" class="btn">Read more</a>
         </div>
     </section>
     <!--services section design-->
@@ -123,7 +126,7 @@
     <h2 class="heading">Latest<span>Project</span></h2>
     <div class="portfolio-container">
         <div class="portfolio-box">
-            <img src="images/moses.png" alt="">
+            <img src="images/university dispensary system.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>I am dedicated to pushing the boundaries of what's possible in the world of front-end development. Feel free to explore my portfolio to see some of my best work and get in touch to discuss potential collaborations or exciting projects.</p>
@@ -131,7 +134,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="images/moses.png" alt="">
+            <img src="images/e-commerce.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>I am dedicated to pushing the boundaries of what's possible in the world of front-end development. Feel free to explore my portfolio to see some of my best work and get in touch to discuss potential collaborations or exciting projects.</p>
@@ -139,7 +142,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="images/moses.png" alt="">
+            <img src="images/university dispensary system.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>I am dedicated to pushing the boundaries of what's possible in the world of front-end development. Feel free to explore my portfolio to see some of my best work and get in touch to discuss potential collaborations or exciting projects.</p>
@@ -147,7 +150,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="images/moses.png" alt="">
+            <img src="images/e-commerce.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>I am dedicated to pushing the boundaries of what's possible in the world of front-end development. Feel free to explore my portfolio to see some of my best work and get in touch to discuss potential collaborations or exciting projects.</p>
@@ -155,7 +158,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="images/moses.png" alt="">
+            <img src="images/university dispensary system.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>I am dedicated to pushing the boundaries of what's possible in the world of front-end development. Feel free to explore my portfolio to see some of my best work and get in touch to discuss potential collaborations or exciting projects.</p>
@@ -163,7 +166,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="images/moses.png" alt="">
+            <img src="images/e-commerce.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Design</h4>
                 <p>I am dedicated to pushing the boundaries of what's possible in the world of front-end development. Feel free to explore my portfolio to see some of my best work and get in touch to discuss potential collaborations or exciting projects.</p>
