--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <hr>
     </div>
     <div class="home-image">
-        <img src="images/me2.jpg" alt="">
+        <img src="images/google.jpg" alt="">
 
     </div>
     </section>
