--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://www.facebook.com/profile.php?id=100074292634258"><i class='bx bxl-facebook-circle'></i></a>
             <a href="https://wa.me/254769933048?text=How&ref=blog.short.io"><i class='bx bxl-whatsapp-square'></i></a>
             <a href="https://github.com/MOWDAD/"><i class='bx bxl-github'></i></a>
-            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="https://www.youtube.com/@EasyProgrammingwithmoz8054"><i class='bx bxl-youtube'></i></a>
             
         </div>
         <hr>
@@ -47,14 +47,14 @@
         <hr>
     </div>
     <div class="home-image">
-        <img src="images/google.jpg" alt="">
+        <img src="images/me2.png" alt="">
 
     </div>
     </section>
     <!--about section-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/me2.jpg" alt="">
+            <img src="images/me2.png" alt="">
         </div>
         <div class="about-content">
            <h2 class="heading">About <span>Me</span></h2>
